# pullomatic

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  module.nix  package.nix  renovate.json  rust-toolchain.toml
.circleci/: config.yml
.github/workflows/: build.yaml  release.yml
src/: config.rs  main.rs  repo.rs  ticker.rs  webhook.rs
src/webhook/: github.rs  gitlab.rs  mod.rs  plain.rs
