[package]
name = "pullomatic"
description = "Automates git repository syncing through pure configuration"
version = "0.2.1"
authors = ["Dustin Frisch <fooker@lab.sh>"]
license = "MIT"

edition = "2021"

[dependencies]
anyhow = "1.0.98"

tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }

futures = "0.3.31"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

git2 = "0.20.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
serde-humantime = "0.1.1"

axum = { version = "0.8.4", features = ["macros"] }
hmac = "0.12.1"
sha1 = "0.10.6"
hex = "0.4.3"
json = "0.12.4"

clap = { version = "4.5.37", features = ["derive", "color"] }
